BACKEND/LabNet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: espectaculos
spec:
  type: NodePort
  selector:
    app: espectaculos
  ports:
    - name: http
      port: 80
      targetPort: 80  # 👈 el contenedor escucha aquí
      nodePort: 30080
